# optica

./: .gitignore  Cargo.toml  README.md  TODO.md
cli/: Cargo.toml
cli/src/: main.rs  read.rs  repl.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  number.rs  source.rs
compiler/src/ast/: expression.rs  helpers.rs  mod.rs  module.rs  statement.rs  typed.rs  untyped.rs
compiler/src/errors/: interpreter.rs  loader.rs  mod.rs  parser.rs  typechecker.rs
compiler/src/lexer/: helpers.rs  lexer.rs  mod.rs  parser.rs  token.rs
compiler/src/loader/: mod.rs
compiler/src/parser/: combinators.rs  expression.rs  mod.rs  module.rs  parser.rs  pattern.rs  statement.rs  testing.rs  types.rs
compiler/src/runtime/: interpreter.rs  runtime.rs
compiler/src/source/: input.rs
compiler/src/typechecker/: context.rs  fold.rs  generator.rs  typechecker.rs
compiler/src/utils/: mod.rs  path.rs  test.rs  vec.rs
optica/: Cargo.toml
optica/src/: lib.rs  main.rs
optica/src/ast/: helpers.rs  mod.rs  traverser.rs  typed.rs  untyped.rs
optica/src/cli/: mod.rs  read.rs  repl.rs
optica/src/errors/: helpers.rs  interpreter.rs  language.rs  lexer.rs  loader.rs  mod.rs  parser.rs  typechecker.rs
optica/src/intrinsics/: adt.rs  conversions.rs  helpers.rs  mod.rs
optica/src/lexer/: helpers.rs  lexer.rs  mod.rs  parser.rs  testing.rs  token.rs
optica/src/loader/: mod.rs
optica/src/parser/: combinators.rs  expression.rs  mod.rs  module.rs  parser.rs  pattern.rs  statement.rs  testing.rs  types.rs
optica/src/runtime/: interpreter.rs  mod.rs  runtime.rs  stack.rs  testing.rs
(+25 files in other folders)
