[package]
name = "optica"
version = "0.1.0"
description = "Minimal, interpreted, statically typed functional programming language."
authors = ["Vladislav Mamon <hello@vm.codes>"]
edition = "2021"
publish = false

[dependencies]
ariadne = { version = "0.1.5" }
indoc = "1.0"
clap = { version = "3.2.5", features = ["cargo", "derive"] }
nom = { version = "7.1" }
